--- a/src/components/Main/Couriers/FullInfoCourier/FullInfoCourier.css
+++ b/src/components/Main/Couriers/FullInfoCourier/FullInfoCourier.css
@@ -1,16 +1,18 @@
 .full-info-courier {
     background-color: rgb(224, 224, 255);
     width: 100%;
-    height: 100%;
+    height: 100% ;
     display:none;
+    z-index: 1;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 .full-info-courier.active {
-    transform: 1;
     display: block;
 }
 
 .full-info-courier .close-btn {
-    color: blue;
-    
+    color: blue;   
 }
