feat: little ux

--- a/src/components/Main/Couriers/FullInfoCourier/FullInfoCourierBody/FullInfoCourierBody.css
+++ b/src/components/Main/Couriers/FullInfoCourier/FullInfoCourierBody/FullInfoCourierBody.css
@@ -7,6 +7,6 @@
 }
 
 .full-info-line__description {
-    font-size: 15px;
-    color: darkslategrey;
+    font-size: 14px;
+    color: rgb(62, 97, 97);
 }
