--- a/src/components/Main/Couriers/FullInfoCourier/FullInfoCourier.css
+++ b/src/components/Main/Couriers/FullInfoCourier/FullInfoCourier.css
@@ -1,5 +1,5 @@
 .full-info-courier {
-    background-color: rgb(224, 224, 255);
+    background-color: rgb(243, 243, 255);
     width: 100%;
     height: 100% ;
     display:none;
@@ -7,6 +7,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
+    padding: 10px;
 }
 
 .full-info-courier.active {
