--- a/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
+++ b/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
@@ -6,7 +6,22 @@
     width: 25%;
 }
 
+.new-courier-line {
+    display: block;
+    height: 65px;
+}
+
 .new-courier-line__description {
     font-size: 14px;
     color: rgb(62, 97, 97);
+}
+
+.new-courier-line__error {
+    font-size: 13px;
+    color: rgb(138, 45, 45);
+    margin: 0px;
+}
+
+.new-courier-line__error p {
+    margin: 0px;
 }
