--- a/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
+++ b/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
@@ -18,10 +18,14 @@
 
 .new-courier-line__error {
     font-size: 13px;
-    color: rgb(138, 45, 45);
+    color: rgb(159, 37, 37);
     margin: 0px;
 }
 
 .new-courier-line__error p {
     margin: 0px;
+}
+
+.new-courier-clm select {
+    width: 120px;
 }
