feat: dirty  new courier12

--- a/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
+++ b/src/components/Main/Couriers/NewCourier/NewCourierBody/NewCourierBody.css
@@ -33,3 +33,11 @@
 .success-msg {
     color: rgb(12, 147, 102);
 }
+
+.new-courier-header .close-btn {
+    color: blue;   
+}
+
+.new-courier-header {
+    text-align: right;
+}
