feat: loading start2

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -7,6 +7,12 @@ body, html, #root, .App {
     box-sizing: border-box;
 }
 
+h1 {
+    margin: 0px;
+    padding-top: 100px;
+}
+
 .def-btn {
     cursor: pointer;
 }
+
